--- a/public/about/index.html
+++ b/public/about/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
+  <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
     <meta charset="UTF-8" />
-    <title>{{ .Title }}</title>
+    <title>Sobre Nosotros</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/daisyui"></script>
   </head>
   <body class="bg-base-200 text-base-content p-8">
     <div class="max-w-3xl mx-auto bg-white rounded-xl shadow-md p-6">
-      <h1 class="text-3xl font-bold mb-4">{{ .Title }}</h1>
+      <h1 class="text-3xl font-bold mb-4">Sobre Nosotros</h1>
       <div class="prose max-w-none">
-        {{ .Content }}
+        <p>Bienvenido a la página de prueba. Este contenido es editable desde el CMS.</p>
+
       </div>
     </div>
   </body>
