--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <title>CMS</title>
-
-    <!-- Netlify Identity widget -->
-    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-
-    <!-- Decap CMS -->
-    <script src="https://unpkg.com/decap-cms@latest/dist/decap-cms.js"></script>
   </head>
   <body>
-    <!-- Required root element -->
+    <!-- Contenedor requerido por Decap CMS -->
     <div id="nc-root"></div>
+
+    <!-- Netlify Identity Widget -->
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js" defer></script>
+
+    <!-- Decap CMS -->
+    <script src="https://unpkg.com/decap-cms@3.6.4/dist/decap-cms.js" defer></script>
   </body>
 </html>
