--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -11,6 +11,7 @@
     <!-- Netlify Identity Widget -->
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js" defer></script>
 
-    
+    <!-- Decap CMS -->
+    <script src="https://unpkg.com/decap-cms@3.6.4/dist/decap-cms.js" defer></script>
   </body>
 </html>
